--- a/Skooby.WebApp/Views/Home/ViewBook.cshtml
+++ b/Skooby.WebApp/Views/Home/ViewBook.cshtml
@@ -366,6 +366,11 @@
                                             </div>
                                         </div>
                                     </div>
+                                    <div class="row">
+                                        <div class="col">
+                                            <div class="g-recaptcha" data-sitekey="6LdpiSgpAAAAAAo5PPvFZhLTpaC4Qz3nH0fAHLl2"></div>
+                                        </div>
+                                    </div>
                                 </div>
 
                             </div>
@@ -502,7 +507,7 @@
 
 
 <!-- Your HTML and Razor code here -->
-
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <script>
     // Global rating variable
     var currentRating = 0;
