implemented search users

--- a/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
+++ b/ASI.Basecode.WebApp/Views/Admin/Index.cshtml
@@ -34,7 +34,7 @@
             <div class="col col-left">
                 <div class="search-container">
                     <form class="search-container d-flex" role="search" method="get"
-                        action="@Url.Action("Index", "Author")">
+                        action="@Url.Action("Index", "Admin")">
                         <input class="form-control me-2 search-input" type="search" placeholder="Search"
                             aria-label="Search" name="searchQuery">
                         <button class="btn btn-outline-success search-button" type="submit">Search</button>
