--- a/Skooby.WebApp/Views/Home/Index.cshtml
+++ b/Skooby.WebApp/Views/Home/Index.cshtml
@@ -21,9 +21,7 @@
         position: -webkit-sticky;
         position: sticky;
         top: 10%;
-        box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
-        -webkit-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
-        -moz-box-shadow: 2px 1px 8px 0px rgba(0,0,0,0.67);
+        box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
     }
  
      .Seemore {
@@ -45,7 +43,7 @@
 <section class="skooby-section skooby-dashboard">
     <h2 class="genre-title">Genres</h2>
     <div class="container-wrapper">
-        <div class="content-wrapper" id="bookListContainer">
+        <div class="section-wrapper content-wrapper" id="bookListContainer">
             @{
                 var uniqueGenres = Model.SelectMany(book => book.GenreNames)
                 .Distinct()
