--- a/Skooby.WebApp/wwwroot/css/style.css
+++ b/Skooby.WebApp/wwwroot/css/style.css
@@ -25,7 +25,7 @@
 }
 
 body {
-    background-color: white;
+    background-color: #f3f3f3;
     max-width: 100%;
     overflow-x: hidden;
     margin-bottom: -60px;
@@ -58,6 +58,12 @@ header {
 }
 
 
+.section-wrapper {
+    border-radius: 10px;
+    background-color: #ffffff;
+    padding: 40px !important;
+    box-shadow: 1px 1px 15px rgba(161, 182, 253, 0.825);
+}
 
 
 .searchbar,
