--- a/Skooby.WebApp/wwwroot/css/pagination.css
+++ b/Skooby.WebApp/wwwroot/css/pagination.css
@@ -1,6 +1,6 @@
 ﻿.pagination-container {
-    padding-top:41px;
-    padding-bottom: 191px;
+    padding-top:50px;
+    /*padding-bottom: 191px;*/
     width: 640px;
     margin: 0;
 }
